Correcting copywright text align

--- a/css/styles.css
+++ b/css/styles.css
@@ -252,6 +252,7 @@ footer {
   margin-bottom: 2em;
   width: 100%;
   font-size: 0.75em;
+  justify-content: center;
 }
 
 /* MEDIA QUERIES */
